pki/kubernetes_config/hashibank.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashibank-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashibank-v2
  template:
    metadata:
      labels:
        app: hashibank-v2
    spec:
      containers:
        - name: hashibank-v2
          image: jamiewri/hashibank:0.0.3
          args:
            - -dev
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: hashibank-v2
spec:
  selector:
    app: hashibank-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
